--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,14 @@ body {
     .header .logo_svg {
       line-height: 70px; }
     .header .logo {
-      line-height: 70px; }
+      line-height: 70px;
+      margin-left: 13vw;
+      padding-right: 20px; }
+      .header .logo .titulo_logo {
+        font-size: 3vw; }
+    .header .nav_responsive {
+      display: flex;
+      flex-flow: row nowrap; }
     .header .navbarList {
       flex-direction: column;
       align-items: center;
