--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -116,10 +116,20 @@ footer{
 
 }
 
+@media (max-width: 990px) {
+    footer{
+        .logo_footer{
+            h1{
+                font-size: 20px;
+            }
+        }
+    }
+}
+
 @media (max-width: 768px) {
     footer{
         height: 100%;
-        width: 100vw;
+        width: 100%;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
         grid-template-areas: 'logo'
@@ -131,7 +141,6 @@ footer{
         .logo_footer{
             margin-top: 20px;
             height: 97px;
-            width: 100%;
             display: flex;
             flex-direction: row;
             justify-content: center;
@@ -152,7 +161,7 @@ footer{
         .btn_responsive{
             display: block;
             background: #EC5A61;
-            width: 100vw;
+            width: 80vw;
             height: 1px;
             border: 1px solid #EC5A61;
             margin-top: 10px;
@@ -171,7 +180,7 @@ footer{
         .design_footer{
             background: #F39498;
             padding: 15px;
-            width: 100vw;
+            width: 100%;
             margin-top: 50px;
 
             .title_footer1{
@@ -196,7 +205,7 @@ footer{
 
                 .design_resp1{
                     padding: 20px 0;
-                    width: 300px;
+                   
 
                     p{
                         margin-top: 15px;
@@ -204,8 +213,8 @@ footer{
                 }
 
                 .design_resp2{
-                    padding: 20px;
-                    width: 300px;
+                    padding: 20px 0;
+                    
 
                     p{
                         margin-top: 15px;
@@ -213,5 +222,24 @@ footer{
                 }           
             }   
         }
+    }
+
+    @media (max-width: 520px) {
+        .design_list_resp{
+            justify-content: space-around;
+            .design_resp1{
+                p{
+                    font-size: 14px;
+                }
+    
+            }
+            .design_resp2{
+                p{
+                    font-size: 14px;
+                }
+                
+            }           
+        }
+        
     }
 }
