--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -126,7 +126,7 @@
             @media (max-width: 768px) {
                 .header{
                     height: 70px;
-
+                    width: 100%;
                 }
 
                     .logo_svg{ 
