--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,224 +1,252 @@
-.header{
-    background: #DCD0C2;
-    font-size: 18px;
-    position: fixed;
-    width: 100%;
-    height: 80px;
-    top: 0;
-    left: 0;
-    z-index: 20;
+.header {
+  background: #dcd0c2;
+  font-size: 18px;
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  top: 0;
+  left: 0;
+  z-index: 20;
 
-        .navbar{
-            display: flex;
-            justify-content: space-between;
+    .navbar {
+        width: 100%;
+        display: flex;
+        
+        .boton {
+            background: #dcd0c2;
+            border: none;
+            font-size: 30px;
+            padding: 0 15px;
+            line-height: 60px;
+            display: none;
         }
 
-        .logo{
+        .logo {
             display: flex;
-            font-family: 'Julius Sans One', sans-serif;
-            font-size: 14px;
-            font-weight: bold;
+            font-family: "Julius Sans One", sans-serif;
             line-height: 80px;
 
-           
+            h1{
+                font-size: 20px;
+
+                @media (max-width: 900px) {
+                    font-size: 18px;
+                }
+            }
         }
 
-        .nav_link{
+        .link_logo {
             text-decoration: none;
             color: black;
             font-size: 15px;
             font-weight: 600;
         }
 
-        .logo_svg{
-            margin: 0 30px; 
-        
+        .logo_svg {
+            margin: 0 20px;
         }
 
-        .titulo_logo{
-            width: 300px;
+        .titulo_logo {
+            width: 280px;
 
+            @media (min-width: 768px) {
+                width: 240px;
+            }
         }
 
-        .boton{
-            background: #DCD0C2;
-            border: none;
-            font-size: 32px;
-            padding: 0 20px;
-            line-height: 60px;
-            display: none;
-        }     
-
-        .navbarList{
+        .navbarList {
+            width: 100%;
             display: flex;
+            align-items: center;
             list-style: none;
-            margin-right: 160px;
-        }
+            margin-left: 30vw;
 
-            .nav_item{
-                margin: 0 20px;
+            @media (max-width: 1115px) {
+                margin-left: 24vw;
+            }
+
+            @media (max-width: 1000px) {
+                margin-left: 12vw;
+            }
+
+            @media (max-width: 860px) {
+                margin-left: 7vw;
+            }
+
+            @media (max-width: 810px) {
+                margin-left: 1vw;
+            }
+
+            .nav_item {
                 text-transform: uppercase;
                 width: max-content;
                 line-height: 80px;
-            }
-    
-            .nav_link{
-                text-decoration: none;
-                color: black;
-                font-size: 15px;
-                font-weight: 600;
-            }
-    
-            .nav_linkMenu{
-                transition: 0.2s;
-                padding-bottom: 5px;
-                &:hover{
+                
+                @media (min-width: 768px) {
+                    font-size: 13px;
+                }
+                
+                .nav_link {
+                    text-decoration: none;
+                    color: black;
+                    font-size: 15px;
+                    font-weight: 600;
+                    margin: 0 10px;
+
+                        @media (min-width: 768px) {
+                            font-size: 14px;
+                            margin: 0 8px;
+                        }
+                }
+                
+                .nav_linkMenu {
+                    transition: 0.2s;
+                    padding-bottom: 5px;
+                    &:hover {
                     background: none;
-                    border-bottom:4px solid crimson;
+                    border-bottom: 4px solid crimson;
+                    }
+                }
+                
+                .nav_linkMenu__active {
+                    background: none;
+                    border-bottom: 4px solid crimson;
                 }
             }
-            
-            .nav_linkMenu__active{
+
+            .btn_idioma {
                 background: none;
-                border-bottom: 4px solid crimson;
-            }
-    
-            .btn_idioma{
-                background: #DCD0C2;
                 border-radius: 50px;
                 border: none;
                 position: relative;
                 cursor: pointer;
-                display: flex;
-                justify-content: center;
                 outline: none;
-                height: 30px;
-                width: 70px;
-                margin-top: 25px;
-                
-                span{
-                    line-height: 30px;
-                    display: block;
-                    background: none;
-                    font-size: 14px;
-                    font-family: 'Montserrat', sans-serif;
-                    font-weight: 600;
-                    .español_img{
+                margin-top: 10px;
+
+                @media (max-width: 1024px) {
+                    margin-top: 4px;
+                }
+
+                span {
+                line-height: 30px;
+                display: block;
+                background: none;
+                font-weight: 600;
+                    .español_img {
                         width: 53px;
                         height: 30px;
                         transition: 0.3s;
-                        &:hover{
-                            transform: scale(1.2);
+                        &:hover {
+                        transform: scale(1.2);
                         }
                     }
-    
-                    .ingles_img{
+
+                    .ingles_img {
                         width: 30px;
                         height: 30px;
                         transition: 0.3s;
-                        &:hover{
-                            transform: scale(1.2);
+                        &:hover {
+                        transform: scale(1.2);
                         }
                     }
                 }
             }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .header {
         
-            @media (max-width: 768px) {
-                .header{
-                    height: 70px;
-                    width: 100%;
-                }
-
-                    .logo_svg{ 
-                        line-height: 70px;   
-                    }
-
-                    .logo{
-                        line-height: 70px;
-                        margin-left: 13vw;
-                        padding-right: 20px;
-                        .titulo_logo{
-                            font-size: 3vw;
-                        }
-                    }
-                    .nav_responsive{
-                        display: flex;
-                        flex-flow: row nowrap;
-                    }
-                    .navbarList{
-                        flex-direction: column;
-                        align-items: center;
-                        border-radius: 5px;
-                        margin-right: 50%;
-                        margin-left: 40%;
-                        width: 200px;
-                        position: fixed;
-                        top: 70px;
-                        padding: 0;
-                        background: #DCD0C2;  
-                        height: calc(100% - 70px);
-                        overflow-y: auto;
-                        transition: all 1s;
-                        left: -100%;
-                    }
-
-                    .nav_item{
-                        line-height: 70px;
-                    }
-
-                    .nav_linkMenu:hover,
-                    .nav_linkMenu__active{
-                        background: none;
-                        color: crimson;
-                    }
-
-                    .boton{
-                        display: block;
-                        height: 70px;
-                        cursor: pointer;
-                    }
-
-                    .menu_visible{
-                        left: -40%;
-                    }
-                 
+        
+        .navbar{
+            .boton {
+                display: block;
+                height: 70px;
+                cursor: pointer;
             }
             
-            @media (max-width: 990px) {
-                .nav_link{
-                    font-size: 14px;
-                    font-weight: 600;
+            .logo_svg {
+                line-height: 70px;
+            }
+    
+            .logo {
+                line-height: 70px;
+                margin-left: 13vw;
+                padding-right: 20px;
+                .titulo_logo {
+                font-size: 3vw;
                 }
-
-                .logo_svg{
-                    margin: 0 15px;       
+            }
+            .nav_responsive {
+                display: flex;
+                flex-flow: row nowrap;
+            }
+            .navbarList {
+                flex-direction: column;
+                align-items: center;
+                border-radius: 5px;
+                margin-right: 0;
+                margin-left: 40%;
+                width: 200px;
+                position: fixed;
+                top: 70px;
+                padding: 0;
+                background: #dcd0c2;
+                height: calc(100% - 70px);
+                overflow-y: auto;
+                transition: all 1s;
+                left: -100%;
+                
+                .nav_item {
+                    line-height: 70px;
                 }
-
-                .logo{
-                    font-size: 10px;
+        
+                .nav_linkMenu:hover,
+                .nav_linkMenu__active {
+                    background: none;
+                    color: crimson;
                 }
+            }
+    
+            .menu_visible {
+                left: -40%;
+            }
+        }
+    }
+}
 
-                .titulo_logo{
-                    width: 280px;
-                }
-
-                .navbarList{
-                    padding: 0;
-                    margin-right: 20px;
-                }
-
-                .nav_link{
-                    font-size: 14px;
-                    font-weight: 600;
-                }
-
+@media (max-width: 990px) {
+    header{
+        .navbar{
+            .nav_item {
+                margin: 0 10px;
+                
+            }
+    
+            .nav_link {
+                font-size: 14px;
+                font-weight: 600;
+            }
+        
+            .logo_svg {
+                margin: 0 15px;
+            }
+        
+            .logo {
+                font-size: 10px;
+            }
+        
+            .titulo_logo {
+                width: 280px;
+            }
+        
+            .navbarList {
+                padding: 0;
+                
             }
 
+        }
 
-       
-        
-       
-
-
-
+    }
 }
