--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,293 +1,312 @@
 .main_top{
     margin-top: 100px;
-}
 
-.section1{
-    width: 100%;
-    height: 640px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin-bottom: 100px;
-    margin-top: 100px;
-
-    .sectionHola{
-        padding-left: 40px;
-        width: 620px;
-        margin-right: 60px;
+    .section1{
+        width: 100%;
+        height: 640px;
         display: flex;
-        flex-flow: column nowrap;
-        justify-content: flex-start;
+        align-items: center;
+        justify-content: space-around;
+        margin-bottom: 100px;
+        margin-top: 100px;
 
-        .hola{
-            font-family: 'DM Serif Display', serif;
-            font-size: 72px;
-            font-weight: 400;
-        }
-    
-        .hola2{
-            font-family: 'DM Serif Display', serif;
-            font-weight: 400;
-            font-size: 28px;
-        }
-    
-        p{
-            font-family: 'Montserrat', sans-serif;
-            font-size: 18px;
-            font-weight: 600;
-            text-align: justify;
-            line-height: 21px;
-            margin-top: 8px;
-        }
-    
-        .btnSection1{
-            background: #EC5A61;
-            border-radius: 50px;
-            width: 209px;
-            height: 45px;
-            border: none;
-            margin-left: 35%;
-            margin-right: 50%;
-            margin-top: 70px;
-            transition: 0.2s;
-            color: #FFFFFF;
-            &:hover{
-                background-color: #c24e54;
+        .sectionHola{
+            padding-left: 40px;
+            width: 620px;
+            margin-right: 60px;
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: flex-start;
+
+            .hola{
+                font-family: 'DM Serif Display', serif;
+                font-size: 72px;
+                font-weight: 400;
             }
+        
+            .hola2{
+                font-family: 'DM Serif Display', serif;
+                font-weight: 400;
+                font-size: 28px;
+            }
+        
+            p{
+                font-family: 'Montserrat', sans-serif;
+                font-size: 18px;
+                font-weight: 600;
+                text-align: justify;
+                line-height: 21px;
+                margin-top: 8px;
+            }
+        
+            .btnSection1{
+                background: #EC5A61;
+                border-radius: 50px;
+                width: 209px;
+                height: 45px;
+                border: none;
+                margin-left: 35%;
+                margin-right: 50%;
+                margin-top: 70px;
+                transition: 0.2s;
+                color: #FFFFFF;
+                &:hover{
+                    background-color: #c24e54;
+                }
+                a{
+                    text-decoration: none;
+                    
+                }
+            }
+        }
+
+        .imgHome{
+            width: 620px;
+            height: 640px;
+        }
+    }
+
+    .sectionAyudarte{
+        margin-bottom: 100px;
+
+        h3{
+            text-align: center;
+            margin-bottom: 80px;
+            font-family: 'DM Serif Display', serif;
+            font-size: 36px;
+            font-weight: 400;
+        }
+
+        .section2{
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            margin: 0 30px;
+
+            .brandingHome{
+                background: #E8B4B7;
+                padding: 20px;
+                width: 323px;
+                height: 439px;
+                border-radius: 16px;
+                margin: 10px 20px;
+
+                h4{
+                    font-family: 'Montserrat', sans-serif;
+                    font-size: 14px;
+                    font-weight: 500;
+                }
+
+                img{
+                    margin-left: 28%;
+                    margin-right: 50%;
+                    margin-top: 20px;
+                    margin-bottom: 20px;
+                }
+
+                h6{
+                    text-align: center;
+                    font-size: 20px;
+                    font-family: 'Open Sans', sans-serif;
+                    margin-bottom: 25px;
+                }
+
+                p{
+                    text-align: center;
+                    font-size: 16px;
+                    font-family: 'Montserrat', sans-serif;
+                    font-weight: 600;
+                }
+                &:hover{
+                    box-shadow: rgba(23, 23, 26, 0.2) 0px 7px 29px 0px;
+                }
+            }
+
+        }
+    }
+
+    .sectionProyectos{
+        padding: 20px;
+        margin-bottom: 60px;
+        margin-left: 20px;
+        margin-right: 20px;
+        
+        h3{
+            text-align: center;
+            margin-bottom: 50px;
+            font-family: 'DM Serif Display', serif;
+            font-size: 36px;
+            font-weight: 400;
+
+        }
+        .proyectos{
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            margin: 10px 0;
+
             a{
                 text-decoration: none;
-                
+                margin: 0 10px;
+                background-position:center;
+                display: flex;
+                flex-flow: row nowrap;
+                align-items: flex-end;
+                transition: 0.5s;
+                p{
+                    padding: 10px;
+                    color: #fff;
+                    background-color: #00000080;
+                    width: 100%;
+                    font-size: 18px;
+                    font-family: 'Montserrat', sans-serif;
+                    font-weight: 600;
+                }
+                &:hover{
+                    transform: scale(1.1);
+                }
+            }
+            .proy1_6{
+                width: 656px;
+                height: 283px;
+            }
+            .proy2_5{
+                width: 330px;
+                height: 283px;
+            }
+            .img1{
+                background-image: url("../img/Imagen 1 proyectos.png");
+            }
+            .img2{
+                background-image: url("../img/Imagen 2 proyectos.png");
+            }
+            .img3{
+                background-image: url("../img/Imagen 3 proyectos.png");
+            }
+            .img4{
+                background-image: url("../img/Imagen 4 proyectos.png");
+            }
+            .img5{
+                background-image: url("../img/Imagen 5 proyectos.png");
+            }
+            .img6{
+                background-image: url("../img/Imagen 6 proyectos.png");
             }
         }
-    }
-
-    .imgHome{
-        width: 620px;
-        height: 640px;
-    }
-}
-
-.sectionAyudarte{
-    margin-bottom: 100px;
-
-    h3{
-        text-align: center;
-        margin-bottom: 80px;
-        font-family: 'DM Serif Display', serif;
-        font-size: 36px;
-        font-weight: 400;
-    }
-
-    .section2{
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        margin: 0 30px;
-
-        .brandingHome{
-            background: #E8B4B7;
-            padding: 20px;
-            width: 323px;
-            height: 439px;
-            border-radius: 16px;
-            margin: 10px 20px;
-
-            h4{
-                font-family: 'Montserrat', sans-serif;
-                font-size: 14px;
-                font-weight: 500;
-            }
-
-            img{
-                margin-left: 28%;
-                margin-right: 50%;
-                margin-top: 20px;
-                margin-bottom: 20px;
-            }
-
-            h6{
-                text-align: center;
-                font-size: 20px;
-                font-family: 'Open Sans', sans-serif;
-                margin-bottom: 25px;
-            }
-
-            p{
-                text-align: center;
-                font-size: 16px;
-                font-family: 'Montserrat', sans-serif;
-                font-weight: 600;
-            }
-            &:hover{
-                box-shadow: rgba(23, 23, 26, 0.2) 0px 7px 29px 0px;
-            }
-        }
-
+        
     }
 }
 
-.sectionProyectos{
-    padding: 20px;
-    margin-bottom: 60px;
-    margin-left: 20px;
-    margin-right: 20px;
-    
-    h3{
-        text-align: center;
-        margin-bottom: 50px;
-        font-family: 'DM Serif Display', serif;
-        font-size: 36px;
-        font-weight: 400;
+// @media (max-width: 1110px) {
+//     .sectionProyectos{
+//         .proyectos{
+//             .proy1_6{
+//                 width: 1000px;
+//                 height: 243px;
+//             }
 
-    }
-    .proyectos{
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        margin: 10px 0;
+//             .proy2_5{
+//                 width: 220px;
+//                 height: 243px;
+//             }
+//         }
+        
 
-        a{
-            text-decoration: none;
-            margin: 0 10px;
-            background-position:center;
-            display: flex;
-            flex-flow: row nowrap;
-            align-items: flex-end;
-            transition: 0.5s;
-            p{
-                padding: 10px;
-                color: #fff;
-                background-color: #00000080;
-                width: 100%;
-                font-size: 18px;
-                font-family: 'Montserrat', sans-serif;
-                font-weight: 600;
-            }
-            &:hover{
-                transform: scale(1.1);
-            }
-        }
-        .proy1_6{
-            width: 656px;
-            height: 283px;
-        }
-        .proy2_5{
-            width: 330px;
-            height: 283px;
-        }
-        .img1{
-            background-image: url("../img/Imagen 1 proyectos.png");
-        }
-        .img2{
-            background-image: url("../img/Imagen 2 proyectos.png");
-        }
-        .img3{
-            background-image: url("../img/Imagen 3 proyectos.png");
-        }
-        .img4{
-            background-image: url("../img/Imagen 4 proyectos.png");
-        }
-        .img5{
-            background-image: url("../img/Imagen 5 proyectos.png");
-        }
-        .img6{
-            background-image: url("../img/Imagen 6 proyectos.png");
-        }
-    }
-    
-}
+//     }
+// }
 
 
 
 @media (max-width: 768px){
     .main_top{
         margin-top: 0;
-    }
+  
 
-    .section1{
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-
-    .imgHome{
-        display: none;
-    }
-
-    .sectionAyudarte{
-        margin-bottom: 50px;
-    }
-
-    .section2{
-        flex-direction: column;
-        
-        .brandingHome{
-            width: 262px;
-            height: 365px;
-            margin: 10px 20px;
-        }
-       
-    }
-
-    .sectionProyectos{
-
-        .proyectos1{
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr 1fr;
-            grid-template-areas: 'digital1 digital1'
-                                 'branding1 comunicacion1';
-    
-            .digital1{
-                grid-area: digital1;
-                width: 660px;
-                height: 240px;
-            }
-    
-            .branding1{
-                margin-top: 10px;
-                grid-area: branding1;
-                width: 320px;
-                height: 240px;
-            }
-    
-            .comunicacion1{
-                margin-top: 10px;
-                grid-area: comunicacion1;
-                width: 320px;
-                height: 240px;
-            }
+        .section1{
+            margin-top: 0;
+            margin-bottom: 0;
         }
 
-        .proyectos2{
-            margin-top: 40px;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr 1fr;
-            grid-template-areas: 'branding2 branding2'
-                                 'digital2 comunicacion2';
+        .imgHome{
+            display: none;
+        }
+
+        .sectionAyudarte{
+            margin-bottom: 50px;
+        }
+
+        .section2{
+            flex-direction: column;
             
-
-            .digital2{
-                margin-top: 10px;
-                grid-area: digital2;
-                width: 320px;
-                height: 240px;
+            .brandingHome{
+                width: 262px;
+                height: 365px;
+                margin: 10px 20px;
             }
-    
-            .branding2{
-                grid-area: branding2;
-                width: 660px;
-                height: 240px;
-            }
-    
-            .comunicacion2{
-                margin-top: 10px;
-                grid-area: comunicacion2;
-                width: 320px;
-                height: 240px;
-            }
+        
         }
 
+        .sectionProyectos{
+
+            .proyectos1{
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-template-rows: 1fr 1fr;
+                grid-template-areas: 'digital1 digital1'
+                                    'branding1 comunicacion1';
+        
+                .digital1{
+                    grid-area: digital1;
+                    width: 660px;
+                    height: 240px;
+                }
+        
+                .branding1{
+                    margin-top: 10px;
+                    grid-area: branding1;
+                    width: 320px;
+                    height: 240px;
+                }
+        
+                .comunicacion1{
+                    margin-top: 10px;
+                    grid-area: comunicacion1;
+                    width: 320px;
+                    height: 240px;
+                }
+            }
+
+            .proyectos2{
+                margin-top: 40px;
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-template-rows: 1fr 1fr;
+                grid-template-areas: 'branding2 branding2'
+                                    'digital2 comunicacion2';
+                
+
+                .digital2{
+                    margin-top: 10px;
+                    grid-area: digital2;
+                    width: 320px;
+                    height: 240px;
+                }
+        
+                .branding2{
+                    grid-area: branding2;
+                    width: 660px;
+                    height: 240px;
+                }
+        
+                .comunicacion2{
+                    margin-top: 10px;
+                    grid-area: comunicacion2;
+                    width: 320px;
+                    height: 240px;
+                }
+            }
+
+        }
     }
 }
 
