--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -1,5 +1,6 @@
-.sectionAll{
+.sectionAllServ{
     display: flex;
+    height: 100%;
 }
 
 .sidebarServicios{
@@ -87,12 +88,12 @@
         }
         
         .ul_servicios{
-            font-size: 16px;
+            font-size: 14px;
             margin-left: 15px;
         }
         
         .item_servicios{
-            margin: 50px 0;
+            margin: 40px 0;
             font-family: 'Montserrat', sans-serif;
             font-weight: 600;
         }
@@ -105,8 +106,12 @@
                     border: none;
                     margin-left: 10%;
                     margin-right: 50%;
-                    margin-top: 20px;
+                    margin-top: 50px;
                     color: #FFFFFF; 
+        }
+
+        .botonservicios_resp{
+            display: none;
         }
         
         .serviciosBox{
@@ -118,15 +123,15 @@
         }
         
         .imagen_Servicios{
-            width: 512px;
-            height: 512px;
+            width: 490px;
+            height: 490px;
             margin-left: 50px;
             
         }
         
         .back_red{
-            width: 630px;
-            height: 308px;
+            width: 610px;
+            height: 292Px;
             background: #EC5A61;
             margin-top: 250px;
         }
@@ -173,7 +178,7 @@
         }
         
         .ul_servicios{
-            font-size: 16px;
+            font-size: 14px;
             margin-left: 15px;
         }
         
@@ -191,8 +196,12 @@
                     border: none;
                     margin-left: 10%;
                     margin-right: 50%;
-                    margin-top: 20px;
+                    margin-top: 50px;
                     color: #FFFFFF; 
+        }
+
+        .botonservicios_resp{
+            display: none;
         }
         
         .serviciosBox{
@@ -204,15 +213,15 @@
         }
         
         .imagen_Servicios{
-            width: 512px;
-            height: 512px;
+            width: 490px;
+            height: 490px;
             margin-left: 50px;
             
         }
         
         .back_red{
-            width: 630px;
-            height: 308px;
+            width: 610px;
+            height: 292px;
             background: #EC5A61;
             margin-top: 250px;
         }
@@ -254,7 +263,7 @@
         }
         
         .ul_servicios{
-            font-size: 16px;
+            font-size: 14px;
             margin-left: 15px;
         }
         
@@ -275,6 +284,10 @@
                     margin-top: 20px;
                     color: #FFFFFF; 
         }
+
+        .botonservicios_resp{
+            display: none;
+        }
         
         .serviciosBox3{
             position: relative;
@@ -286,16 +299,302 @@
         }
         
         .imagen_Servicios{
-            width: 512px;
-            height: 512px;
+            width: 490px;
+            height: 490px;
             margin-left: 50px;
             
         }
         
         .back_red{
-            width: 630px;
-            height: 308px;
+            width: 610px;
+            height: 292px;
             background: #EC5A61;
             margin-top: 250px;
         }
     }
+
+//---- MEDIA QUERYS---- //
+
+@media (max-width: 1115px) {
+    .sectionServicios{
+        width: 100vw;
+
+        .list_tareas_Servicios{
+            padding: 0;
+            margin-left: 20px;
+            margin-right: 0;
+        }
+        
+        .title_Servicios__titulo{
+            font-size: 24px;
+        }
+        
+        .title_Servicios__texto{
+            font-size: 15px;
+        }
+
+        .serviciosBox3{
+            padding-left: 0;
+        }
+        
+        .imagen_Servicios{
+            width: 410px;
+            height: 410px;
+            margin-left: 25px;
+        }
+        
+        .back_red{
+            width: 460px;
+            height: 292px;
+            margin-top: 160px;
+        }
+    }
+
+    .sectionServicios2{
+        width: 100vw;
+        
+        .list_tareas_Servicios{
+            padding: 0;
+            margin-left: 20px;
+            margin-right: 0;
+        }
+        
+        .title_Servicios__titulo{
+            font-size: 24px;
+        }
+        
+        .title_Servicios__texto{
+            font-size: 15px;
+        }
+
+        .serviciosBox3{
+            padding-left: 0;
+        }
+        
+        .imagen_Servicios{
+            width: 410px;
+            height: 410px;
+            margin-left: 25px;
+        }
+        
+        .back_red{
+            width: 460px;
+            height: 292px;
+            margin-top: 160px;
+        }
+    }
+
+    .sectionServicios3{
+        width: 100vw;
+        
+        .list_tareas_Servicios{
+            padding: 0;
+            margin-left: 20px;
+            margin-right: 0;
+        }
+        
+        .title_Servicios__titulo{
+            font-size: 24px;
+        }
+        
+        .title_Servicios__texto{
+            font-size: 15px;
+        }
+
+        .serviciosBox3{
+            padding-left: 0;
+        }
+        
+        .imagen_Servicios{
+            width: 410px;
+            height: 410px;
+            margin-left: 25px;
+        }
+        
+        .back_red{
+            width: 460px;
+            height: 292px;
+            margin-top: 160px;
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    
+    .sectionAllServ{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 100px;
+
+        .sectionList_Servicios{
+            display: flex;
+            flex-direction: column;
+        }
+        
+        .sectionServicios{
+            height: 100%;
+
+            .title_Servicios{
+                margin-top: 10px;
+            }
+
+            .item_servicios{
+                width: 70vw;
+            }
+
+            .botonservicios{
+                 display: none;
+            }
+
+            
+            .serviciosBox{
+                .imagen_Servicios{
+                    width: 50vw;
+                    height: 52vw;
+                    margin-left: 23vw;
+                }
+                
+                .back_red{
+                    width: 100vw;
+                    height: 30vw;
+                    margin-top: 10vw;
+                }
+                .botonservicios_resp{
+                    display: block;
+                    background: #EC5A61;
+                    position: relative;
+                    border-radius: 50px;
+                    width: 229px;
+                    height: 45px;
+                    border: none;
+                    margin-left: 38vw;
+                    font-size: 2.3vw;
+                    color: #FFFFFF;
+                    margin-top: 16vw;
+                    @media (max-width: 768px) {
+                        width: 190px;
+                    }
+                    @media (max-width: 600px) {
+                        width: 160px;
+
+                    }
+                    @media (max-width: 500px) {
+                        width: 140px;
+                        margin-left: 32%;
+                    }
+                }
+            }
+        }
+
+        .sectionServicios2{
+            height: 100%;
+
+            .title_Servicios{
+                margin-top: 10px;
+            }
+
+            .item_servicios{
+                width: 70vw;
+            }
+
+            .botonservicios{
+                 display: none;
+            }
+
+            .serviciosBox{
+                .imagen_Servicios{
+                    width: 50vw;
+                    height: 52vw;
+                    margin-left: 23vw;
+                }
+                
+                .back_red{
+                    width: 100vw;
+                    height: 30vw;
+                    margin-top: 10vw;
+                }
+                .botonservicios_resp{
+                    display: block;
+                    background: #EC5A61;
+                    position: relative;
+                    border-radius: 50px;
+                    width: 229px;
+                    height: 45px;
+                    border: none;
+                    font-size: 2.3vw;
+                    margin-left: 38%;
+                    color: #FFFFFF;
+                    margin-top: 16vw;
+                    @media (max-width: 768px) {
+                        width: 190px;
+                    }
+                    @media (max-width: 600px) {
+                        width: 160px;
+                    }
+                    @media (max-width: 500px) {
+                        width: 140px;
+                        margin-left: 32%;
+                    }
+                }
+            }
+        }
+
+        .sectionServicios3{
+            height: 100%;
+
+            .title_Servicios{
+                margin-top: 10px;
+            }
+
+            .item_servicios{
+                width: 70vw;
+            }
+
+            .botonservicios{
+                 display: none;
+            }
+            
+            .serviciosBox3{
+                padding-left: 0;
+                
+                .imagen_Servicios{
+                    width: 50vw;
+                    height: 52vw;
+                    margin-left: 23vw;
+                }
+                
+                .back_red{
+                    width: 100vw;
+                    height: 30vw;
+                    margin-top: 10vw;
+                }
+
+                .botonservicios_resp{
+                    display: block;
+                    background: #EC5A61;
+                    position: relative;
+                    border-radius: 50px;
+                    width: 229px;
+                    height: 45px;
+                    border: none;
+                    margin-left: 38vw;
+                    font-size: 2.3vw;
+                    color: #FFFFFF;
+                    margin-top: 16vw;
+                    @media (max-width: 768px) {
+                        width: 190px;
+                    }
+                    @media (max-width: 600px) {
+                        width: 160px;
+
+                    }
+                    @media (max-width: 500px) {
+                        width: 140px;
+                        margin-left: 32%;
+                    }
+                }
+            }
+        }
+    }
+}
+
